--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,8 @@
   with_first_found:
     - "{{ ansible_distribution }}-{{ ansible_distribution_major_version}}.yml"
     - "{{ ansible_distribution }}.yml"
+    - "{{ ansible_os_family }}.yml"
+    - default.yml
 
 - name: install
   ansible.builtin.include_tasks: "{{ item }}"
