--- a/meta/main.yml
+++ b/meta/main.yml
@@ -36,5 +36,4 @@ galaxy_info:
     - mate
 
 dependencies: []
-  # List your role dependencies here, one per line. Be sure to remove the '[]' above,
-  # if you add dependencies to this list.
+  #- utils
