--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-# tasks file for desktop
+# roles/desktop/tasks/main.yml
 #
 - name: gather os specific variables
   ansible.builtin.include_vars: "{{ item }}"
@@ -14,3 +14,46 @@
   with_first_found:
     - "install_{{ ansible_os_family }}.yml"
     - "install.yml"
+
+- name: set default target
+  ansible.builtin.file:
+    src: "{{ systemd_lib }}/system/{{ desktop_target_default }}"
+    dest: /etc/systemd/system/default.target
+    state: link
+  notify:
+    - systemd reload
+    - systemd isolate target
+
+# https://help.gnome.org/admin/system-admin-guide/stable/dconf-nfs-home.html.en
+- name: gnome settings over nfs
+  ansible.builtin.lineinfile:
+    insertbefore: BOF
+    line: service-db:keyfile/user
+    path: /etc/dconf/profile/user
+    state: present
+  when:
+    - desktop_gnome_nfs_user_home
+
+- name: gnome desktop config.
+  ansible.builtin.include_tasks: configure-gnome.yml
+  when:
+    - desktop_gnome_settings |length >0
+
+- name: install eclipse
+  ansible.builtin.include_tasks: install-eclipse-ide.yml
+  when:
+    - desktop_eclipse_enabled
+
+- name: install owncloud client
+  ansible.builtin.include_tasks: owncloud-client-{{ ansible_os_family }}.yml
+  when:
+    - desktop_owncloud_client_enabled
+
+- name: conky installation
+  block:
+    - name: conky install
+      ansible.builtin.include_tasks: install-conky-{{ ansible_os_family }}.yml
+    - name: conky config.
+      ansible.builtin.include_tasks: configure-conky.yml
+  when:
+    - desktop_conky_enabled
