--- a/tasks/conky/configure.yml
+++ b/tasks/conky/configure.yml
@@ -8,3 +8,14 @@
     mode: 0644
     src: conky.conf.j2
 
+- name: conky autostart
+  ansible.builtin.copy:
+    content: |
+      [Desktop Entry]
+      Type=Application
+      Name=conky
+      Exec=conky --daemonize --pause=5
+      StartupNotify=false
+      Terminal=false
+    dest: /etc/xdg/autostart/conky.desktop
+    mode: 0644
